--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,22 @@ body {
   min-height: 100vh;
   background-color: #fff;
 }
+
+.hero::before {
+  content: "";
+  background-image: url("./assets/images/abs.png");
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: -1;
+  opacity: 0.09;
+}
+
+.bg-malagasyflag {
+  background-image: linear-gradient(
+    to right,
+    white 15%,
+    rgba(251, 0, 0, 0.787) 40%,
+    green
+  );
+}
